Bug 1851225 - Don't report screen shift in ScreenHelperGTK. r=stransky

This is basically bug 1795066, but for the non-ScreenGetterWayland
code-path.

Properly supporting GetWidgetScreen in ScreenGetterGTK caused this to
surface in environments where we'd otherwise reported the primary
monitor (which usually starts at 0, 0).

Differential Revision: https://phabricator.services.mozilla.com/D187297